Ready to Deployment

--- a/index.html
+++ b/index.html
@@ -19,9 +19,9 @@
     </div>
 
     <div class="navbar-icon">
-      <a href="#" id="mode"><img src="/img/icon/sun.svg" alt="Mode" title="Dark Mode"></a>
-      <a href="#" id="cart"><img src="/img/icon/shopping-cart.svg" alt="Cart"></a>
-      <a href="#" id="hamburger-menu"><img src="/img/icon/menu.svg" alt=""></a>
+      <a href="#" id="mode"><img src="./img/icon/sun.svg" alt="Mode" title="Dark Mode"></a>
+      <a href="#" id="cart"><img src="./img/icon/shopping-cart.svg" alt="Cart"></a>
+      <a href="#" id="hamburger-menu"><img src="./img/icon/menu.svg" alt=""></a>
     </div>
   </nav>
   <!-- Navbar end -->
@@ -41,7 +41,7 @@
     <h2><span>Tentang</span> Kami</h2>
     <div class="row">
       <div class="image">
-        <img src="/img/about.jpg" alt="">
+        <img src="./img/about.jpg" alt="">
       </div>
       <div class="content">
         <h3>Kenapa Harus Kopi Kami?</h3>
@@ -57,32 +57,32 @@
       <h2><span>Produk</span> Kami</h2>
       <div class="product-wrap">
         <div class="item">
-          <img src="/img/product.jpg" alt="">
+          <img src="./img/product.jpg" alt="">
           <h6>Espresso</h6>
           <a href="">Beli Sekarang</a>
         </div>
         <div class="item">
-          <img src="/img/product.jpg" alt="">
+          <img src="./img/product.jpg" alt="">
           <h6>Espresso</h6>
           <a href="">Beli Sekarang</a>
         </div>
         <div class="item">
-          <img src="/img/product.jpg" alt="">
+          <img src="./img/product.jpg" alt="">
           <h6>Espresso</h6>
           <a href="">Beli Sekarang</a>
         </div>
         <div class="item">
-          <img src="/img/product.jpg" alt="">
+          <img src="./img/product.jpg" alt="">
           <h6>Espresso</h6>
           <a href="">Beli Sekarang</a>
         </div>
         <div class="item">
-          <img src="/img/product.jpg" alt="">
+          <img src="./img/product.jpg" alt="">
           <h6>Espresso</h6>
           <a href="">Beli Sekarang</a>
         </div>
         <div class="item">
-          <img src="/img/product.jpg" alt="">
+          <img src="./img/product.jpg" alt="">
           <h6>Espresso</h6>
           <a href="">Beli Sekarang</a>
         </div>
